Fix category navbar spacing to percentages

--- a/app/assets/stylesheets/other/category_nav.scss
+++ b/app/assets/stylesheets/other/category_nav.scss
@@ -5,6 +5,7 @@
     text-decoration: none;
     color: black;
     border-top: 1px solid rgba(128, 128, 128, 0.283);
+    padding-left: 18%;
 }
 
 .nav-cats {
@@ -13,7 +14,7 @@
 }
 
 .category-names-nav {
-    margin-left: 55px;
+    // margin-left: 55px;
     text-decoration: none;
     color: grey;
 }
